--- a/webgl.html
+++ b/webgl.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>WebGL | Lesson 01</title>
-    <script src="../lib/glMatrix-0.9.5.min.js"></script>
+    <title>WebGL | Lesson 2</title>
+    <script src="./lib/glMatrix-0.9.5.min.js"></script>
   </head>
   <body>
     <canvas width=640 height=480></canvas>
