Fix title of asteroids page.

--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>WebGL | Lesson 01</title>
+    <title>Asteroids</title>
     <script src="../lib/glMatrix-0.9.5.min.js"></script>
   </head>
   <body>
