--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Asteroids</title>
-    <script src="../lib/glMatrix-0.9.5.min.js"></script>
+    <script src="../lib/gl-matrix-min.js"></script>
   </head>
   <body>
     <canvas width=640 height=480></canvas>
@@ -109,38 +109,89 @@
       var mvMatrix = mat4.create();
       var pMatrix = mat4.create();
 
+      matStack = {
+        stack: [],
+        push: function() {
+          this.stack.push(mvMatrix);
+          mvMatrix = mat4.clone(mvMatrix);
+        },
+        pop: function() {
+          if (!this.stack.length) {
+            throw "Empty matrix stack";
+          }
+          mvMatrix = this.stack.pop();
+        }
+      }
+
+      function Vec2(x, y) {
+        this.x = x || 0;
+        this.y = y || 0;
+      }
+
+      function vecAdd(v1, v2) { return new Vec2(v1.x + v2.x, v1.y + v2.y); }
+      function vecSub(v1, v2) { return new Vec2(v1.x - v2.x, v1.y - v2.y); }
+      function vecMul(v1, s) { return new Vec2(v1.x * s, v1.y * s); }
+
       function setMatrixUniforms() {
         gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, pMatrix);
         gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
       }
 
-
-      var lineVertexPositionBuffer;
-      function initBuffers() {
-        var vertices;
-
-        lineVertexPositionBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ARRAY_BUFFER, lineVertexPositionBuffer);
-        vertices = new Float32Array([ 1,  0, 0,
+      function Ship() {
+        this.vertexBuffer = gl.createBuffer();
+        gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
+        vertices = new Float32Array([1, 0, 0,
                                      -1, -0.6, 0,
-                                      -0.7, 0, 0,
-                                      -1, 0.6, 0,
-                                      1, 0, 0]),
+                                     -0.7, 0, 0,
+                                     -1, 0.6, 0,
+                                     1, 0, 0]);
         gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
-        lineVertexPositionBuffer.itemSize = 3;
-        lineVertexPositionBuffer.numItems = 5;
+        this.vertexBuffer.itemSize = 3;
+        this.vertexBuffer.numItems = 5;
+
+        this.position = new Vec2();
+        this.velocity = new Vec2();
+        this.rotation = 0;
       }
 
-      var rotation = 0;
+      Ship.prototype = {
+        update: function(controls) {
+          if (controls.isKeyDown(38)) {
+            var acceleration = new Vec2(Math.cos(this.rotation),
+                                        Math.sin(this.rotation));
+            acceleration = vecMul(acceleration, this.ACCELERATION);
+            this.velocity = vecAdd(this.velocity, acceleration);
+          }
+          var deltaRot = 0;
+          if (controls.isKeyDown(37)) {
+            deltaRot += 0.1;
+          }
+          if (controls.isKeyDown(39)) {
+            deltaRot -= 0.1;
+          }
+
+          this.velocity = vecMul(this.velocity, this.FRICTION);
+
+          this.position = vecAdd(this.position, this.velocity);
+          this.rotation += deltaRot;
+        },
+        draw: function(mvMatrix) {
+          mat4.translate(mvMatrix, mvMatrix, [this.position.x, this.position.y, 0]);
+          mat4.rotateZ(mvMatrix, mvMatrix, this.rotation);
+
+          gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
+          gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute,
+                                 this.vertexBuffer.itemSize,
+                                 gl.FLOAT, false, 0, 0);
+          setMatrixUniforms();
+          gl.drawArrays(gl.LINE_STRIP, 0, this.vertexBuffer.numItems);
+        },
+        ACCELERATION: 0.005,
+        FRICTION: 0.985,
+      }
+
       function update() {
-        var deltaRot = 0;
-        if (controls.isKeyDown(37)) {
-          deltaRot += 0.1;
-        }
-        if (controls.isKeyDown(39)) {
-          deltaRot -= 0.1;
-        }
-        rotation += deltaRot;
+        ship.update(controls);
       }
 
       function draw() {
@@ -149,29 +200,27 @@
         var aspectRatio = gl.viewportWidth / gl.viewportHeight;
         var w = 20;
         var h = w / aspectRatio;
-        mat4.ortho(-w, w, -h, h, -10, 10, pMatrix);
+        mat4.ortho(pMatrix, -w, w, -h, h, -10, 10);
 
         mat4.identity(mvMatrix);
-        mat4.translate(mvMatrix, [0, 0, 0]);
-        mat4.rotateZ(mvMatrix, rotation);
-        gl.bindBuffer(gl.ARRAY_BUFFER, lineVertexPositionBuffer);
-        gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute,
-                               lineVertexPositionBuffer.itemSize,
-                               gl.FLOAT, false, 0, 0);
-        setMatrixUniforms();
-        gl.drawArrays(gl.LINE_STRIP, 0, lineVertexPositionBuffer.numItems);
+
+        matStack.push();
+        ship.draw(mvMatrix);
+        matStack.pop();
       }
     </script>
     <script>
       var canvas = document.getElementsByTagName("canvas")[0];
       initGL(canvas);
       initShaders();
-      initBuffers();
 
       gl.clearColor(0.0, 0.0, 0.0, 1.0);
 
+      ship = new Ship();
+
       function tick() {
         requestAnimationFrame(tick);
+
         update();
         draw();
       }
