--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -21,285 +21,14 @@
       }
     </style>
     <script src="../lib/gl-matrix-min.js"></script>
+    <script src="./shaders.js"></script>
+    <script src="./objects.js"></script>
   </head>
   <body>
     <div class="container">
       <canvas width=1024 height=769></canvas>
     </div>
 
-    <script id="shader-fs" type="x-shader/x-fragment">
-      precision mediump float;
-
-      void main(void) {
-        gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-      }
-    </script>
-    <script id="shader-vs" type="x-shader/x-vertex">
-      attribute vec3 aVertexPosition;
-
-      uniform mat4 uPMatrix;
-      uniform mat4 uMVMatrix;
-
-      void main(void) {
-        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-      }
-    </script>
-    <script>
-      var gl;
-      function initGL(canvas) {
-        try {
-          gl = canvas.getContext("webgl");
-          gl.viewportWidth = canvas.width;
-          gl.viewportHeight = canvas.height;
-        } catch (e) {
-          alert("Could not initialise WebGL, sorry :(");
-        }
-      }
-
-      function getShader(gl, id) {
-        var shaderScript = document.getElementById(id);
-        if (!shaderScript) {
-          return null;
-        }
-
-        var str = "";
-        var k = shaderScript.firstChild;
-        while(k) {
-          if (k.nodeType == 3) {
-            str += k.textContent;
-          }
-          k = k.nextSibling;
-        }
-
-
-        var shaderTypes = {
-          "x-shader/x-fragment": gl.FRAGMENT_SHADER,
-          "x-shader/x-vertex":   gl.VERTEX_SHADER
-        }
-        var shader = gl.createShader(shaderTypes[shaderScript.type] || null);
-
-        gl.shaderSource(shader, str);
-        gl.compileShader(shader);
-
-        if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-          alert(gl.getShaderInfoLog(shader));
-          return null;
-        }
-
-        return shader;
-      }
-
-      var controls = {
-        isKeyDown: function(keyCode) {
-          return Boolean(this.keyStates[keyCode]);
-        },
-        keyStates: []
-      };
-      document.addEventListener("keyup", function(e) {
-        controls.keyStates[e.keyCode] = false;
-      });
-      document.addEventListener("keydown", function(e) {
-        controls.keyStates[e.keyCode] = true;
-      });
-
-      var shaderProgram;
-      function initShaders() {
-        var vertexShader = getShader(gl, "shader-vs");
-        var fragmentShader = getShader(gl, "shader-fs");
-
-        shaderProgram = gl.createProgram();
-        gl.attachShader(shaderProgram, vertexShader);
-        gl.attachShader(shaderProgram, fragmentShader);
-        gl.linkProgram(shaderProgram);
-
-        if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
-          alert("Cold not initialise shaders.");
-        }
-
-        gl.useProgram(shaderProgram);
-
-        shaderProgram.vertexPositionAttribute =
-            gl.getAttribLocation(shaderProgram, "aVertexPosition");
-        gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
-
-        shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
-        shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
-      }
-
-      var pMatrix = mat4.create();
-      var w, h;
-      function initViewport() {
-        var aspectRatio = gl.viewportWidth / gl.viewportHeight;
-        w = 40;
-        h = w / aspectRatio;
-        mat4.ortho(pMatrix, -w / 2, w / 2, -h / 2, h / 2, -10, 10);
-      }
-
-      var mvMatrix = mat4.create();
-      matStack = {
-        stack: [],
-        push: function() {
-          this.stack.push(mvMatrix);
-          mvMatrix = mat4.clone(mvMatrix);
-        },
-        pop: function() {
-          if (!this.stack.length) {
-            throw "Empty matrix stack";
-          }
-          mvMatrix = this.stack.pop();
-        }
-      }
-
-      function setMatrixUniforms() {
-        gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, pMatrix);
-        gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
-      }
-
-      function wrapPosition(object) {
-        if (object.position[0] > w / 2) { object.position[0] -= w; }
-        if (object.position[0] < -w / 2) { object.position[0] += w; }
-        if (object.position[1] > h / 2) { object.position[1] -= h; }
-        if (object.position[1] < -h / 2) { object.position[1] += h; }
-      }
-
-      function Ship() {
-        this.vertexBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
-        vertices = new Float32Array([1, 0, 0,
-                                     -1, -0.6, 0,
-                                     -0.7, 0, 0,
-                                     -1, 0.6, 0]);
-        gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
-        this.vertexBuffer.itemSize = 3;
-        this.vertexBuffer.numItems = 4;
-
-        this.position = vec2.create();
-        this.velocity = vec2.create();
-        this.rotation = 0;
-      }
-
-      Ship.prototype = {
-        update: function(controls) {
-          if (controls.isKeyDown(38)) {
-            var acceleration = vec2.fromValues(Math.cos(this.rotation),
-                                               Math.sin(this.rotation));
-            vec2.scale(acceleration, acceleration, this.ACCELERATION);
-            vec2.add(this.velocity, this.velocity, acceleration);
-          }
-          var deltaRot = 0;
-          if (controls.isKeyDown(37)) {
-            deltaRot += 0.1;
-          }
-          if (controls.isKeyDown(39)) {
-            deltaRot -= 0.1;
-          }
-
-          vec2.scale(this.velocity, this.velocity, 1 - this.FRICTION);
-          vec2.add(this.position, this.position, this.velocity);
-          this.rotation += deltaRot;
-
-          wrapPosition(this);
-        },
-        draw: function(mvMatrix) {
-          mat4.translate(mvMatrix, mvMatrix, [this.position[0],
-                                              this.position[1], 0]);
-          mat4.rotateZ(mvMatrix, mvMatrix, this.rotation);
-
-          gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
-          gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute,
-                                 this.vertexBuffer.itemSize,
-                                 gl.FLOAT, false, 0, 0);
-          setMatrixUniforms();
-          gl.drawArrays(gl.LINE_LOOP, 0, this.vertexBuffer.numItems);
-        },
-        ACCELERATION: 0.005,
-        FRICTION: 0.015,
-      }
-
-      function Asteroid(radius) {
-        this.vertexBuffer = gl.createBuffer();
-        vertices = [];
-        for (var i = 0; i < 12; i++) {
-          var rotation = (i / 12) * 2 * Math.PI;
-          var vertex = [Math.cos(rotation), Math.sin(rotation), 0];
-          var vertDist = radius + (Math.random() * 0.6 * radius) - 0.3 * radius;
-          vec3.scale(vertex, vertex, vertDist);
-          vertices = vertices.concat(vertex);
-        }
-        gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
-        gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices),
-                      gl.STATIC_DRAW);
-        this.vertexBuffer.itemSize = 3;
-        this.vertexBuffer.numItems = 12;
-
-        this.position = vec2.fromValues(Math.random() * 40 - 20, Math.random() * 40 - 20);
-        this.velocity = vec2.random(vec2.create(), 0.01);
-        this.radius = radius;
-      }
-
-      Asteroid.prototype = {
-        update: function() {
-          vec2.add(this.position, this.position, this.velocity);
-          wrapPosition(this);
-        },
-        draw: function(mvMatrix) {
-          mat4.translate(mvMatrix, mvMatrix, [this.position[0],
-                                              this.position[1], 0]);
-
-          gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
-          gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute,
-                                 this.vertexBuffer.itemSize,
-                                 gl.FLOAT, false, 0, 0);
-          setMatrixUniforms();
-          gl.drawArrays(gl.LINE_LOOP, 0, this.vertexBuffer.numItems);
-        }
-      }
-
-      function update() {
-        ship.update(controls);
-
-        for (var i = 0; i < asteroids.length; i++) {
-          asteroids[i].update();
-        }
-      }
-
-      function draw() {
-        gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight);
-        gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-
-        mat4.identity(mvMatrix);
-
-        matStack.push();
-        ship.draw(mvMatrix);
-        matStack.pop();
-
-        for (var i = 0; i < asteroids.length; i++) {
-          matStack.push();
-          asteroids[i].draw(mvMatrix);
-          matStack.pop();
-        }
-      }
-
-      var canvas = document.getElementsByTagName("canvas")[0];
-      initGL(canvas);
-      initViewport();
-      initShaders();
-
-      gl.clearColor(0.0, 0.0, 0.0, 1.0);
-
-      ship = new Ship();
-      asteroids = [];
-      for (var i = 0; i < 16; i++) {
-        asteroids.push(new Asteroid(2.2));
-      }
-
-      function tick() {
-        requestAnimationFrame(tick);
-
-        update();
-        draw();
-      }
-      tick();
-    </script>
+    <script src="./main.js"></script>
   </body>
 </html>
