--- a/asteroids/asteroids.html
+++ b/asteroids/asteroids.html
@@ -23,6 +23,7 @@
     <script src="../lib/gl-matrix-min.js"></script>
     <script src="./shaders.js"></script>
     <script src="./objects.js"></script>
+    <script src="./collisions.js"></script>
   </head>
   <body>
     <div class="container">
