--- a/asteroids.html
+++ b/asteroids.html
@@ -20,7 +20,7 @@
         border: 1px solid white;
       }
     </style>
-    <script src="../lib/gl-matrix-min.js"></script>
+    <script src="./lib/gl-matrix-min.js"></script>
     <script src="./shaders.js"></script>
     <script src="./objects.js"></script>
     <script src="./collisions.js"></script>
