--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <canvas width=640 height=480></canvas>
         <div>
           <div class="controls">arrow keys to move, z to shoot</div>
-          <div>score: <span id="score"></span></div>
+          <div>score: <span id="score"></span> lives: <span id="lives"></span></div>
         </div>
       </div>
     </div>
