Increase size of canvas.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <div class="container">
       <div>
-        <canvas width=640 height=480></canvas>
+        <canvas width="800" height="600"></canvas>
         <div>
           <div class="controls">arrow keys to move, z to shoot</div>
           <div>score: <span id="score"></span> lives: <span id="lives"></span></div>
