Add "Game" state.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
         float: right;
       }
     </style>
-    <script src="./lib/gl-matrix-min.js"></script>
-    <script src="./shaders.js"></script>
-    <script src="./objects.js"></script>
-    <script src="./collisions.js"></script>
+    <script src="lib/gl-matrix-min.js"></script>
+    <script src="shaders.js"></script>
+    <script src="objects.js"></script>
+    <script src="collisions.js"></script>
+    <script src="game.js"></script>
   </head>
   <body>
     <div class="container">
