--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="objects.js"></script>
     <script src="collisions.js"></script>
     <script src="game.js"></script>
+    <script src="start.js"></script>
 </head>
 <body>
     <div class="container">
